scrollbar della sidebar fixato

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -24,6 +24,7 @@ body {
   font-weight: bold;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .content {
